--- a/base/static/css/app.css
+++ b/base/static/css/app.css
@@ -6,3 +6,8 @@
    css/less/bootstrap.less file.
 
    ========================================================================== */
+
+body {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
