--- a/accounts/templates/accounts/login.jinja
+++ b/accounts/templates/accounts/login.jinja
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="container">
     {{ crispy(form) }}
-    <p>Don't have an account? <a href='{{ url('register') }}' data-ajax="false">Register!</a></p>
+    <p>Don't have an account? <a href="{{ url('register') }}" data-ajax="false">Register!</a></p>
 </div>
 {% endblock content %}
