--- a/base/templates/_layouts/base.jinja
+++ b/base/templates/_layouts/base.jinja
@@ -55,15 +55,6 @@
         <a class="navbar-brand" href="/">{{ _("ToolHub") }}</a>
       </div>
       <div class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right">
-          <div class="form-group">
-            <input type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="form-group">
-            <input type="password" placeholder="Password" class="form-control">
-          </div>
-          <button type="submit" class="btn btn-success">Sign in</button>
-        </form>
       </div><!--/.navbar-collapse -->
     </div>
   </nav>
@@ -73,7 +64,11 @@
   </header>
 
   <div role="main">
-    {% block content %}{% endblock %}
+    <div class="container">
+      <div class="row">
+  {% block content %}{% endblock %}
+      </div>
+    </div>
   </div>
 
   <footer>
