tool mptt url integration

--- a/tools/templates/tools/tool_list.jinja
+++ b/tools/templates/tools/tool_list.jinja
@@ -1,1 +1,21 @@
 {% extends "_layouts/base.jinja" %}
+
+{% from "tools/macros/navigation.jinja" import breadcrumbs %}
+
+{% block content %}
+<div class="col-md-12">
+    {{ breadcrumbs(tool_class) }}
+</div>
+{% for tool in tool_list %}
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="http://placekitten.com/g/300/200" alt="">
+      <div class="caption">
+        <h3><a href="{{ tool.get_absolute_url() }}">{{tool.name}}</a></h3>
+        <p>{{tool.description}}<p>
+        <p>category: <a href="{{tool.parent.get_absolute_url()}}">{{tool.parent.name}}</a><p>
+      </div>
+    </div>
+  </div>
+{% endfor %}
+{% endblock %}
