--- a/accounts/templates/accounts/login.jinja
+++ b/accounts/templates/accounts/login.jinja
@@ -1,8 +1,11 @@
 {% extends '_layouts/base.jinja' %}
 
 {% block content %}
-<div class="container">
+<div class="col-md-6">
     {{ crispy(form) }}
-    <p>Don't have an account? <a href="{{ url('register') }}" data-ajax="false">Register!</a></p>
+</div>
+<div class="col-md-6">
+    <p>Don't have an account? <a href="{{ url('signup') }}" data-ajax="false">{{ _('Sign up!') }}</a></p>
+    <p>Forgot your password? <a href="{{ url('account_password_reset') }}">{{ _("Reset your password!") }}</a></p>
 </div>
 {% endblock content %}
