--- a/tools/templates/tools/tool_list.jinja
+++ b/tools/templates/tools/tool_list.jinja
@@ -4,6 +4,7 @@
 
 {% block content %}
 <div class="col-md-12">
+    <h1>{{tool_class}}</h1>
     {{ breadcrumbs(tool_class) }}
 </div>
 {% for tool in tool_list %}
