Url name-spacing the main apps
* breaks a lot of things in django-accounts and django-mptt-urls due to
lookups, probably things in hubs as well. I’ll fix em as I see em.

--- a/accounts/templates/accounts/delete.jinja
+++ b/accounts/templates/accounts/delete.jinja
@@ -8,7 +8,7 @@
 
     <p>If you delete your account, your information will be <b>expunged within {{ ACCOUNT_DELETION_EXPUNGE_HOURS }} hours</b> for safety reasons.</p>
 
-    <form method="post" action="{{ url('account_delete') }}" autocapitalize="off">
+    <form method="post" action="{{ url('account:delete') }}" autocapitalize="off">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Delete My Account</button>
     </form>
