--- a/hubs/templates/hubs/hubuser_detail.jinja
+++ b/hubs/templates/hubs/hubuser_detail.jinja
@@ -11,10 +11,10 @@
     <li>Email: {{ hub_user.user.email }}</li>
 </ul>
 <ul>
-    <li><a href="{{ url( "hub_user_edit", hub.slug, hub_user.user.username ) }}">Edit</a></li>
-    <li><a href="{{ url( "hub_user_delete", hub.slug, hub_user.user.username ) }}">Delete</a></li>
+    <li><a href="{{ url( "hubs:user_edit", hub.slug, hub_user.user.username ) }}">Edit</a></li>
+    <li><a href="{{ url( "hubs:user_delete", hub.slug, hub_user.user.username ) }}">Delete</a></li>
 </ul>
 {% if not hub_user.user.is_active %}
-<a href="{{ url('hub_user_remind', hub.slug, hub_user.user.username ) }}">Send reminder</a>
+<a href="{{ url('hubs:user_remind', hub.slug, hub_user.user.username ) }}">Send reminder</a>
 {% endif %}
 {% endblock %}
