--- a/hubs/templates/hubs/login.jinja
+++ b/hubs/templates/hubs/login.jinja
@@ -9,6 +9,6 @@
         {{ form }}
         <input type="submit" value="Login">
     </form>
-    <p>Forgotten your password? <a href="{{ url( "password_reset" ) }}">Reset it.</a></p>
+    <p>Forgotten your password? <a href="{{ url( "account:password_reset" ) }}">Reset it.</a></p>
   </div>
 {% endblock %}
