--- a/accounts/templates/accounts/password_reset_sent.jinja
+++ b/accounts/templates/accounts/password_reset_sent.jinja
@@ -7,7 +7,7 @@
     <h1>{{ _("Password reset sent") }}</h1>
     {% if not resend %}
         <p>{% trans %}We have sent you an email. If you do not receive it within a few minutes, try resending or contact us at <a href="mailto:{{ THEME_ACCOUNT_CONTACT_EMAIL }}">{{ THEME_ACCOUNT_CONTACT_EMAIL }}</a>.{% endtrans %}</p>
-        <form method="POST" action="{{ url("account_password_reset") }}">
+        <form method="POST" action="{{ url("account:password_reset") }}">
             {% csrf_token %}
             {% for field in form %}
                 {{ field.as_hidden() }}
