--- a/accounts/templates/accounts/password_reset_token.jinja
+++ b/accounts/templates/accounts/password_reset_token.jinja
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="col-md-12">
-    <form class="form-horizontal" method="POST" action="{{ url("account_password_reset_token", uidb36=uidb36, token=token) }}">
+    <form class="form-horizontal" method="POST" action="{{ url("account:password_reset_token", uidb36=uidb36, token=token) }}">
     {{ crispy(form) }}
     </form>
 </div>
