--- a/accounts/templates/accounts/password_reset_token_fail.jinja
+++ b/accounts/templates/accounts/password_reset_token_fail.jinja
@@ -5,6 +5,6 @@
 {% block content %}
 <div class="col-md-12">
     <h1>{{ _("Bad token") }}</h1>
-    <p>{% trans url = url("account_password_reset") %}The password reset link was invalid, possibly because it has already been used. Please request a <a href="{{ url }}">new password reset</a>.{% endtrans %}</p>
+    <p>{% trans url = url("account:password_reset") %}The password reset link was invalid, possibly because it has already been used. Please request a <a href="{{ url }}">new password reset</a>.{% endtrans %}</p>
 </div>
 {% endblock %}
