--- a/accounts/templates/accounts/settings.jinja
+++ b/accounts/templates/accounts/settings.jinja
@@ -9,8 +9,8 @@
 </div>
 <div class="col-md-6">
     <h3>{{_('Account Actions')}}</h3>
-    <a href="{{ url('account_delete') }}">{{ _("Delete account") }}</a>
+    <a href="{{ url('account:delete') }}">{{ _("Delete account") }}</a>
     <br>
-    <a href="{{ url('account_password') }}">{{ _("Update password") }}</a>
+    <a href="{{ url('account:password') }}">{{ _("Update password") }}</a>
 </div>
 {% endblock %}
