--- a/accounts/templates/accounts/signup.jinja
+++ b/accounts/templates/accounts/signup.jinja
@@ -4,9 +4,9 @@
 <div class="col-md-12">
     {{ crispy(form) }}
     <div class="col-md-offset-2">
-        <a href="{{ url('login') }}">{{ _('Login') }}</a>
+        <a href="{{ url('account:login') }}">{{ _('Login') }}</a>
         <br>
-        <a href="{{ url('account_password_reset') }}">{{ _("Reset password") }}</a>
+        <a href="{{ url('account:password_reset') }}">{{ _("Reset password") }}</a>
     </div>
 </div>
 {% endblock %}
