--- a/hubs/templates/hubs/hub_detail.jinja
+++ b/hubs/templates/hubs/hub_detail.jinja
@@ -5,9 +5,9 @@
 {% block page_title %}{{ hub }}{% endblock %}
 {% block hub_content %}
 <ul>
-    <li><a href="{{ url( "hub_edit", hub.slug ) }}">Edit</a></li>
-    <li><a href="{{ url( "hub_delete", hub.slug ) }}">Delete</a></li>
-    <li><a href="{{ url( "hub_user_add", hub.slug ) }}">Add a member</a></li>
+    <li><a href="{{ url( "hubs:edit", hub.slug ) }}">Edit</a></li>
+    <li><a href="{{ url( "hubs:delete", hub.slug ) }}">Delete</a></li>
+    <li><a href="{{ url( "hubs:user_add", hub.slug ) }}">Add a member</a></li>
 </ul>
 
 {{ user_list(hub) }}
