Adding simple tool list to account area
* Mixin for limiting objects to logged in user
* updating account form reverses to use name-spaced urls
* adding new base templates for account page
* temporary page for lending manager admin
closes #3

--- a/accounts/templates/accounts/settings.jinja
+++ b/accounts/templates/accounts/settings.jinja
@@ -1,9 +1,7 @@
-{% extends '_layouts/base.jinja' %}
+{% extends '_layouts/account.jinja' %}
 
 {% block content %}
-<div class="col-md-12">
-    <h1>{{_('Account Settings')}}</h1>
-</div>
+{{super()}}
 <div class="col-md-6">
     {{crispy(form)}}
 </div>
