--- a/accounts/templates/accounts/tool_manager.jinja
+++ b/accounts/templates/accounts/tool_manager.jinja
@@ -7,7 +7,7 @@
 {% block content %}
 {{super()}}
 <div class="col-md-2">
-    <button class="btn btn-success">Add Tool</button>
+    <a href="{{url('tools:create')}}" class="btn btn-success">Add Tool</a>
 </div>
 <div class="col-md-10">
     {% for tool in object_list %}
