--- a/accounts/templates/accounts/login.jinja
+++ b/accounts/templates/accounts/login.jinja
@@ -2,7 +2,10 @@
 
 {% block content %}
 <div class="col-md-6">
+<form action="." method="post">
+    <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}">
     {{ crispy(form) }}
+</form>
 </div>
 <div class="col-md-6">
     <p>Don't have an account? <a href="{{ url('account:signup') }}" data-ajax="false">{{ _('Sign up!') }}</a></p>
