--- a/hubs/templates/hubs/macros/users.jinja
+++ b/hubs/templates/hubs/macros/users.jinja
@@ -2,7 +2,7 @@
 <ul>
     {% for hub_user in hub.hub_users.all() %}
     <li>
-	    <a href="{{ hub_user.get_absolute_url() }}">{{ hub_user }}</a>
+	    <a href="{{ hub_user.get_absolute_url() }}">{{ hub_user.name }}</a>
     </li>
     {% endfor %}
 </ul>
