--- a/toolhub/templates/_layouts/base.jinja
+++ b/toolhub/templates/_layouts/base.jinja
@@ -4,143 +4,131 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/i/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+             More info: h5bp.com/i/378 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{% block page_title %}{{ _("ToolHub") }}{% endblock %}</title>
-  <meta name="description" content="{% block meta_description %}{% endblock %}">
-  <meta name="author" content="{% block meta_author %}{% endblock %}">
+    <title>{% block page_title %}{{ _("ToolHub") }}{% endblock %}</title>
+    <meta name="description" content="{% block meta_description %}{% endblock %}">
+    <meta name="author" content="{% block meta_author %}{% endblock %}">
 
-  <!-- Mobile viewport optimized: h5bp.com/viewport -->
-  <meta name="viewport" content="width=device-width">
+    <!-- Mobile viewport optimized: h5bp.com/viewport -->
+    <meta name="viewport" content="width=device-width">
 
-  {% block meta %}
-  {% endblock %}
+    {% block meta %}
+    {% endblock %}
 
-  {% compress css %}
-  <link rel="stylesheet" href="{{ static('bower/bootstrap/dist/css/bootstrap.css') }}">
-  <link rel="stylesheet" href="{{ static('bower/bootstrap/dist/css/bootstrap-theme.css') }}">
-  <link rel="stylesheet" href="{{ static('css/app.css') }}">
-  {% block css %}{% endblock %}
-  {% endcompress %}
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+    <link rel="stylesheet" href="{{ static('bower/bootstrap/dist/css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ static('bower/bootstrap/dist/css/bootstrap-theme.css') }}">
+    <link rel="stylesheet" href="{{ static('css/app.css') }}">
+    {% block css %}{% endblock %}
+    <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
-  <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance.
-       Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  {% compress js %}
-  <script src="{{ static('js/libs/modernizr-2.6.2-respond-1.1.0.min.js') }}"></script>
-  {% endcompress %}
+    <!-- All JavaScript at the bottom, except this Modernizr build.
+             Modernizr enables HTML5 elements & feature detects for optimal performance.
+             Create your own custom Modernizr build: www.modernizr.com/download/ -->
+    <script src="{{ static('js/libs/modernizr-2.6.2-respond-1.1.0.min.js') }}"></script>
 </head>
 <body class="{% block body_class %}{% endblock %}" {% block body_attributes %}{% block body_app %} ng-app="toolhubApp"{% endblock %}{% endblock %}>
 {% block body %}
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]>
-    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-  <![endif]-->
+    <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+             chromium.org/developers/how-tos/chrome-frame-getting-started -->
+    <!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">{{ _("ToolHub") }}</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{{url('tools:list')}}">Tools</a></li>
-          <li><a href="{{url('hubs:list')}}">Hubs</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated() %}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle">{{ user.username }} <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="{{ url('account:settings') }}">Account Settings</a></li>
-              <li><a href="{{ url('account:tool:manager') }}">Manage Tools</a></li>
-              <li><a href="{{ url('account:tool:lending') }}">Lending Status</a></li>
-              <li class="divider"></li>
-              <li><a href="{{ url('hubs:user_hub_list') }}">Your Hubs</a></li>
-              <li class="divider"></li>
-              <li><a href="{{ url('account:logout') }}">Logout</a></li>
-            </ul>
-          </li>
-          {% else %}
-          <li><a href="{{ url('account:login') }}">Login</a></li>
-          <li><a href="{{ url('account:signup') }}">Sign up</a></li>
-          {% endif %}
-        </ul>
-      </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
-
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-
-  <div role="main">
-    <div class="container">
-      <div class="row">
-      {% if messages %}
-        <div class="col-md-12" ng-controller="MessagesCtrl">
-          {% for message in messages %}
-          <div class="alert {{message.tags}}" ng-init="messages[{{loop.index}}]=true;" ng-show="messages[{{loop.index}}]">
-            <button type="button" class="close" aria-hidden="true" ng-click="messages[{{loop.index}}]=false">&times;</button>
-            {{message}}
-          </div>
-          {% endfor %}
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">{{ _("ToolHub") }}</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{url('tools:list')}}">Tools</a></li>
+                    {% if waffle.flag('enable_hubs') %}
+                    <li><a href="{{url('hubs:list')}}">Hubs</a></li>
+                    {% endif %}
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated() %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">{{ user.username }} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ url('account:settings') }}">Account Settings</a></li>
+                            <li><a href="{{ url('account:tool:manager') }}">Manage Tools</a></li>
+                            <li><a href="{{ url('account:tool:lending') }}">Lending Status</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{{ url('hubs:user_hub_list') }}">Your Hubs</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{{ url('account:logout') }}">Logout</a></li>
+                        </ul>
+                    </li>
+                    {% else %}
+                    <li><a href="{{ url('account:login') }}">Login</a></li>
+                    <li><a href="{{ url('account:signup') }}">Sign up</a></li>
+                    {% endif %}
+                </ul>
+            </div><!--/.navbar-collapse -->
         </div>
-      {% endif %}
-  {% block content %}{% endblock %}
-      </div>
+    </nav>
+
+    <header>
+        {% block header %}{% endblock %}
+    </header>
+
+    <div role="main">
+        <div class="container">
+            <div class="row">
+            {% if messages %}
+                <div class="col-md-12" ng-controller="MessagesCtrl">
+                    {% for message in messages %}
+                    <div class="alert {{message.tags}}" ng-init="messages[{{loop.index}}]=true;" ng-show="messages[{{loop.index}}]">
+                        <button type="button" class="close" aria-hidden="true" ng-click="messages[{{loop.index}}]=false">&times;</button>
+                        {{message}}
+                    </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+    {% block content %}{% endblock %}
+            </div>
+        </div>
     </div>
-  </div>
 
-  <footer>
-    {% block footer %}
-    <div class="container">
-      <hr>
-      <p>&copy; ToolHub {{now("Y")}}</p>
-    </div>
-    {% endblock footer %}
-  </footer>
+    <footer>
+        {% block footer %}
+        <div class="container">
+            <hr>
+            <p>&copy; ToolHub {{now("Y")}}</p>
+        </div>
+        {% endblock footer %}
+    </footer>
 
 
-  <!-- JavaScript at the bottom for fast page loading -->
+    <!-- JavaScript at the bottom for fast page loading -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  {% block cdn_js %}
+    <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+    {% block cdn_js %}
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular{% if not debug %}.min{% endif %}.js"></script>
-  <script>window.angular || document.write('<script src="{{ STATIC_URL }}bower/angular/angular{% if not debug %}.min{% endif %}.js"><\/script>')</script>
-  {# TODO: use UI bootstrap for angular UI elements: http://angular-ui.github.io/bootstrap/ #}
-  {% endblock cdn_js %}
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular{% if not debug %}.min{% endif %}.js"></script>
+    <script>window.angular || document.write('<script src="{{ STATIC_URL }}bower/angular/angular{% if not debug %}.min{% endif %}.js"><\/script>')</script>
+    {# TODO: use UI bootstrap for angular UI elements: http://angular-ui.github.io/bootstrap/ #}
+    {% endblock cdn_js %}
 
-  <!-- scripts concatenated and minified via django-compressor -->
-  {% compress js %}
-  {% block js %}
-  <script src="{{ static('bower/angular-bootstrap/ui-bootstrap-tpls.js') }}"></script>
-  <script src="{{ static('js/main.js') }}"></script>
-  {% endblock js %}
-  {% endcompress %}
-  <!-- end scripts -->
+    {% block js %}
+    <script src="{{ static('bower/angular-bootstrap/ui-bootstrap-tpls.js') }}"></script>
+    <script src="{{ static('js/main.js') }}"></script>
+    {% endblock js %}
 
-  <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
-       mathiasbynens.be/notes/async-analytics-snippet -->
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
+{% include "ga_analytics.jinja" %}
+
 {% endblock %}
 </body>
 </html>
