Adding waffle to jinja context, updating error pages, hub access restricted
* moving homepage to a toolhub template context
* waffle javascript urls added
* putting hub views behind a waffle flag

--- a/toolhub/templates/_layouts/base.jinja
+++ b/toolhub/templates/_layouts/base.jinja
@@ -64,10 +64,12 @@
                         <ul class="dropdown-menu">
                             <li><a href="{{ url('account:settings') }}">Account Settings</a></li>
                             <li><a href="{{ url('account:tool:manager') }}">Manage Tools</a></li>
+                            {% if waffle.flag('enable_hubs') %}
                             <li><a href="{{ url('account:tool:lending') }}">Lending Status</a></li>
                             <li class="divider"></li>
                             <li><a href="{{ url('hubs:user_hub_list') }}">Your Hubs</a></li>
                             <li class="divider"></li>
+                            {% endif %}
                             <li><a href="{{ url('account:logout') }}">Logout</a></li>
                         </ul>
                     </li>
@@ -81,7 +83,13 @@
     </nav>
 
     <header>
-        {% block header %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+{% block header %}{% endblock %}
+                </div>
+            </div>
+        </div>
     </header>
 
     <div role="main">
