Moving from django-jinja to jingo

--- a/toolhub/templates/404.jinja
+++ b/toolhub/templates/404.jinja
@@ -3,7 +3,7 @@
 {% block page_title %}{{ super() }} - {{ _('Not found') }}{% endblock %}
 
 {% block header %}
-    <h1 class="page-header">404 <small>Not found</small></h1>
+    <h1 class="page-header">404 <small>{{ _('Not found') }}</small></h1>
 {% endblock %}
 
 {% block content %}
