--- a/toolhub/templates/500.jinja
+++ b/toolhub/templates/500.jinja
@@ -3,7 +3,7 @@
 {% block page_title %}{{ super() }} - {{ _('Server Error') }}{% endblock %}
 
 {% block header %}
-    <h1 class="page-header">403 <small>Forbidden</small></h1>
+    <h1 class="page-header">500 <small>{{ _('Server Error') }}</small></h1>
 {% endblock %}
 
 {% block content %}
