--- a/toolhub/templates/_layouts/base.jinja
+++ b/toolhub/templates/_layouts/base.jinja
@@ -53,7 +53,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{url('tools:list')}}">{{ _("Tools") }}</a></li>>
+                    <li><a href="{{url('tools:list')}}">{{ _("Tools") }}</a></li>
                     {% if waffle.flag('enable_hubs') %}
                     <li><a href="{{url('hubs:list')}}">{{ _("Hubs") }}</a></li>
                     {% endif %}
